--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,11 @@
 //if IE 8 ]><html class="ie ie8" lang="en">
 // [if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]
 head
+  !!!
+html
+  head
+    title= title
+    link(rel='stylesheet', href='/stylesheets/style.css')
   meta(charset='utf-8')
   title turtle-chat
   meta(name='description', content='')
@@ -11,14 +16,14 @@ head
   // Mobile Specific
   meta(name="viewport", content="width=device-width, initial-scale=1.0")
 
-  // CSS
-  != css("http://wilbur.io.s3.amazonaws.com/all.css")
   != css('app')
+  != js('jquery-1.7.2.min.js')
+  != js('jquery.json-2.3.min.js')
+  != js('jquery.websocket-0.0.1.js')
+  != js('app')
   
 body
   != body
 
-  != js('http://cdnjs.cloudflare.com/ajax/libs/jquery/1.7/jquery.min.js')
-  != js('app')
 
 | </html>
