--- a/views/test-sip.jade
+++ b/views/test-sip.jade
@@ -1,7 +1,10 @@
 h1= title
 p Welcome to #{title}
 script(type='text/javascript')
-  var testSip = 'REGISTER sip:192.168.1.27 SIP/2.0\\r\\n' +
+  var address = location.hostname;
+  var port = location.port;
+
+  var testSip = 'REGISTER sip:' + address + ' SIP/2.0\\r\\n' +
    'Via: SIP/2.0/TCP 192.168.1.13:5061;branch=z9hG4bKnashds7\\r\\n' +
    'Max-Forwards: 70\\r\\n' +
    'From: 1001 <sip:1001@192.168.1.27>;tag=a73kszlfl\\r\\n' +
@@ -17,7 +20,7 @@ script(type='text/javascript')
   }
 
   // set-up web socket
-  var ws = $.websocket("ws://192.168.1.27:3000/", "sip-websocket", {
+  var ws = $.websocket("ws://" + address + ":" + port + "/", "sip-websocket", {
     open: function () { },
     close: function () { alert('websocket has been closed'); },
     events: {
