--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -1,9 +1,40 @@
-@import 'nib'
+@import url(http://fonts.googleapis.com/css?family=Gudea:400,700);
 
-.container
-  margin-top 60px
+box-shadow(args...)
+  -webkit-box-shadow args
+  -moz-box-shadow args
+  box-shadow args
 
-h2
-  smooth-button()
-  width: 90%
-  font-size: 2em
+body
+  margin: 0
+
+header
+  height: 56px
+  display: block
+  padding: 10px 0 0 30px
+  background-color: #b0b0b0
+  position: relative
+  //z-index: 999999
+
+header #logo
+  width: 48px
+  height: 48px
+  display: block
+  float: left
+  background: url(../logo.png), no-repeat
+
+header h1
+  font-family: 'Gudea', 'Georgia', sans-serif
+  display: block
+  float: left
+  margin: 10px 0 0 7px
+
+.divider
+  width: 100%
+  height: 12px
+  background-color: #22201f
+  display: block
+  clear: both
+  position: relative
+  //z-index: 999998
+  box-shadow(0 4px 19px 2px #cecece)
