--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -1,3 +1,4 @@
+@import 'nib'
 @import url(http://fonts.googleapis.com/css?family=Gudea:400,700);
 
 box-shadow(args...)
@@ -9,12 +10,13 @@ body
   margin: 0
 
 header
-  height: 56px
+  height: 55px
   display: block
   padding: 10px 0 0 30px
+  background: linear-gradient(top, #d0d0d0, #b0b0b0)
   background-color: #b0b0b0
   position: relative
-  //z-index: 999999
+  z-index: 999999
 
 header #logo
   width: 48px
@@ -31,10 +33,10 @@ header h1
 
 .divider
   width: 100%
-  height: 12px
+  height: 11px
   background-color: #22201f
   display: block
   clear: both
   position: relative
-  //z-index: 999998
+  z-index: 999998
   box-shadow(0 4px 19px 2px #cecece)
