--- a/views/phone.jade
+++ b/views/phone.jade
@@ -168,9 +168,9 @@ html
       .content-header
         span#network_type
         | Network
-        | (
-        a(href='#', onclick='phone.changeNetworkType()') change
-        | )
+        //- | (
+        //- a(href='#', onclick='phone.changeNetworkType()') change
+        //- | )
         .help-div
           a(href='#', title='Save network properties', onclick='return phone.enableBox(\'network\', false);')
             img#save_network.help-img(src='save.png', style='visibility: hidden;')
