--- a/views/phone.jade
+++ b/views/phone.jade
@@ -7,7 +7,7 @@ html
       function log(msg, type) {
         var log_text = $("log-text");
         if (log_text) {
-          log_text.value += "\n" + msg;
+          log_text.value += "\\n" + msg;
         if (phone && phone.log_scroll)
           log_text.scrollTop = log_text.scrollHeight;
         }
@@ -367,7 +367,7 @@ html
         }
         if (msg) {
         var history = $('im-history');
-        history.value += "\n" + msg;
+        history.value += "\\n" + msg;
         history.scrollTop = history.scrollHeight;
         }
       });
