Fix registering behavior

--- a/assets/css/app.styl
+++ b/assets/css/app.styl
@@ -90,8 +90,10 @@ header #logo
 #error-alert
   height: 32px
   width: 32px
-  background: url(../images/ok.png), no-repeat
   cursor: pointer
+  position: relative
+  float: right
+  margin-top: 5px
 
 .wrap
   width: 575px
