Last commit for this version.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -18,6 +18,7 @@ html
     header
       span(id='logo')
       h1 turtle-chat
+      //- a(href='http://goo.gl/ONZBG', title='Masukkan feedback Anda', target='_blank') feedback
     span(class='divider')
     .wrap
       != body
