--- a/views/phone.jade
+++ b/views/phone.jade
@@ -285,7 +285,7 @@ html
           }
           if (msg) {
           var history = sel('im-history');
-          history.value += "\n" + msg;
+          history.value += "\\n" + msg;
           history.scrollTop = history.scrollHeight;
           }
         });
